<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vorozhbicky.dmitry.snolight.Charts">
    <item
        android:id="@+id/update"
        android:icon="@drawable/update"
        android:orderInCategory="1"
        android:title="@string/update"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_current_values"
        android:orderInCategory="2"
        android:title="@string/currentValues"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="4"
        android:title="@string/aboutUs"
        app:showAsAction="never" />
</menu>
